# cuqls-package

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  requirements.txt
LinearSampling/: KernelFunction.py  LinearSamplingPosterior.py  LossFunction.py  Posteriors.py  __init__.py  util.py
cuqls/: classification.py  posterior.py  regression.py  utils.py
examples/: classification.ipynb  regressionsmall.ipynb  regressionutil.py
examples/classificationutils/: classification.ini  metrics.py
nuqls.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
