[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "cuqls"
version = "0.0.5"
authors = [
    { name="ANON", email="anon@edu.au" },
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/josephwilsonmaths/cuqls-package"